Word-wrap in slogan to prevent horizontal scroll in small screens

--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -296,6 +296,7 @@ label {
   text-transform: uppercase;
   position: relative;
   right: -10px;
+  word-wrap: break-word;
 }
 
 .project {
